--- a/project-6/src/css/style.css
+++ b/project-6/src/css/style.css
@@ -33,10 +33,6 @@ button {
     cursor: pointer;
 }
 
-.sell { 
-  background-color: white;
-  color: #D1C4E9;
-}
 
 .ftc-intro {
   background-color:#0097A7;
@@ -61,11 +57,36 @@ button {
   padding:5px;
 }
 
-.horizontal-rule {
-  background-color:#BDBDBD;
-}
-
 .product-overview p{
   display: inline-block;
   width:20%;
+}
+
+
+  /* Style tab links */
+.tablink {
+    color: white;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 17px;
+    width: 25%;
+}
+
+.menu button{
+    display:inline-block;
+}
+  
+.tablink:hover {
+    background-color: #777;
+}
+  
+  /* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+    color: white;
+    display: none;
+    padding: 100px 20px;
+    height: 100%;
 }
